# PromptStudio

./: .gitignore  LICENSE  angular.json  package-lock.json  package.json
backend/: .env  README.md  app.js  deps.py  init_db.py  main.py  package.json  prompt.py  prompt_schema.py  pyproject.toml  requirements.txt  user.py
backend/app/db/: init_db.py
backend/database/: create_db.py  data-source.ts  init_database.py  init_db.py  prompt.entity.ts  promptVersion.ts
backend/models/: prompt.py
backend/node/: .env  package-lock.json
backend/node/database/: data-source.ts  database.config.ts  prompts.ts
backend/node/middleware/: mockUser.js
backend/node/services/: redisjson.js  seed-redis-prompts.js
backend/python/: .env  config.py  routes.py
backend/python/database/: promptSchema.py
backend/routes/: prompts.js
backend/seeddata/: seed_data.py  seed_db.py
backend/service/: promptService.py
backend/services/: dynamo.js  metrics.ts  openai.js  postgres.service.ts
experience/: README.md  angular.json  package-lock.json  package.json
experience/src/: index.html  styles.scss
experience/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
experience/src/app/components/prompt-detail/: prompt-detail.component.html  prompt-detail.component.spec.ts  (+1 more)
experience/src/app/interceptors/: error.interceptor.ts
experience/src/app/services/: error-handler.service.ts  metrics.service.ts  prompt.service.ts  theme.service.ts
src/: index.html
src/app/: app.component.ts
(+12 files in other folders)
